--- a/index.html
+++ b/index.html
@@ -1,26 +1,81 @@
-NPM Clone
-Nifty Penguin Magic 
-npm Enterprise 
-Products 
-Solutions 
-Resources 
-Docs 
-Support 
-Search 
-Join
-Log In
-Build amazing things
-Essential JavaScript development tools that help you go to market faster and build powerful applications using modern open source code. 
-See plans 
-Join for free
-Bring the best of open source to your company
-npm is the tool used by over 11,000,000 JavaScript developers around the world. Your developers already use it. Your company depends on it. Create an Org and get more out of the tools your team already knows and loves.
-Zero configuration
-Create an org, add your team, and start collaborating. Nothing to configure, set up, or manage.
-Team management 
-Control who has access to what modules within your team namespace using straightforward team management capabilities. 
-Familiar features 
-npm Orgs has 100% parity with all the public npm registry features your developers already use. 
-npm audit 
-Enjoy the security auditing features built into the npm client, a zero-friction way to make open source software safer. 
-Create an Org 
+<header class= "header">
+    <link rel="stylesheet" href="./style.css">
+    <div>
+        <div>
+            <img class="blackHeart" src="images/black-heart.png" alt="black heart">
+            <span> Nifty Penguin Magic </span>
+        </div>
+        <nav>
+            <ul class="header-list">
+                <li><a href="#">npm Enterprise</a></li>
+                <li><a href="#">Products</a></li>
+                <li><a href="#">Solutions</a></li>
+                <li><a href="#">Resources</a></li>
+                <li><a href="#">Docs</a></li>
+                <li><a href="#">Support</a></li>
+            </ul>
+        </nav>
+    </div>
+    <div class="bar-section">
+        <img class="logo" src="images/npm-logo.png" alt="npm-logo"> 
+        <div class="search-wrapper">
+            <span>
+                <img class="magni" src="images/magnifying-glass.png" alt="magnifying-glass">
+            </span>
+            <input class="search-input" placeholder= "Search packages" type="text" value="" name="search" id="search" />
+            <button class = "search-button" type="submit" class="btn">Search</button>
+        </div>
+        <div class="buttons">
+            <a class="join-link" href="#">Join</a>
+            <a class="login-link" href="#">Log in</a>
+        </div>
+    </div>    
+</header>
+<section class="first-section">   
+    <h1>Build amazing things</h1>
+    <a class="first-section-text">
+        Essential JavaScript development tools that help you go to market faster and build powerful applications using modern open source code.
+    </a>
+    <div class= "mid-buttons">
+        <a class="see-plans" href="#">See plans</a>
+        <a class="join-free" href="#">Join for free</a>
+    </div>
+</section>
+<section class="second-section">
+    <img class="triangle" src="images/triangle-hexagon.svg" alt="triangle-hexagon-image">
+    <div>   
+        <h2 class="heading">Bring the best of open source to your company</h2>
+    </div>
+    <a class="quote">
+        npm is the tool used by over 11,000,000 JavaScript developers around the world. Your developers already use it. Your company depends on it. Create an Org and get more out of the tools your team already knows and loves.
+    </a>
+</section>
+<section class="final-section">
+    <div class= "features">
+        <div>
+            <img class="zero" src="images/zero-configuration.svg" alt="zero-configuration-image">
+            <h3>Zero configuration</h3>
+            <p>Create an org, add your team, and start collaborating. Nothing to configure, set up, or manage.</p>
+        </div>
+        <div>
+            <img class="team" src="images/team-management.svg" alt="team-management-image">
+            <h3>Team management</h3>
+            <p>Control who has access to what modules within your team namespace using straightforward team management capabilities.</p>
+        </div>
+        <div>
+            <img class="Familiar" src="images/familiar-features.svg" alt="familiar-features-image">
+            <h3>Team management</h3>
+            <p>
+                npm Orgs has 100% parity with all the public npm registry features your developers already use.
+            </p>
+        </div>
+        <div>
+            <img class="audit" src="images/npm-audit.svg" alt="npm-audit-image">
+            <h3>npm audit</h3>
+            <p>
+                Enjoy the security auditing features built into the npm client, a zero-friction way to make open source software safer.
+            </p>
+        </div>
+    </div>
+    <a class="create-org-btn" href="#">Create an Org</a>
+</section>
